--- a/backend/.env
+++ b/backend/.env
@@ -4,4 +4,5 @@ DB_PASSWORD=root
 DB_NAME=task_manager
 JWT_SECRET=JWT_SECRET_TASK_MANAGER_ORG
 TOKEN_EXPIRY_TIME=604800000
+FRONTEND_URL=http://localhost:3000
 PORT=5000
